test/bad/int_initialization.lat
int main() {
	int n = "asdf";
}
